--- a/man/cyr_expire.8
+++ b/man/cyr_expire.8
@@ -80,7 +80,9 @@ expire entries from the duplicate delivery database, and
 cleanse mailboxes of partially expunged messages (when
 using the "delayed" expunge mode), and
 .IP \(bu 2m
-remove deleted mailboxes (when using the "delayed" delete mode).
+remove deleted mailboxes (when using the "delayed" delete mode), and
+.IP \(bu 2m
+expire entries from conversations databases.
 .PP
 The expiration of messages is controlled by the
 \fB/vendor/cmu/cyrus-imapd/expire\fR mailbox annotation which
@@ -104,6 +106,12 @@ is also controlled by the \fB/vendor/cmu/cyrus-imapd/expire\fR annotation
 which applies to that mailbox.  Unlike message expiration, if no
 annotation applies to the mailbox then duplicate database entries are
 expired using the value given to the \fB-E\fR option.
+.PP
+Expiration of conversations database entries occurs if the
+\fBconversations\fP option is present in \fIimapd.conf\fP.  Expiration
+can be disabled using the \fB\-c\fP option.  The period used to
+expire entries is controlled by the \fBconversations_expire_days\fP
+option in \fIimapd.conf\fP.
 .PP
 \fBCyr_expire\fR reads its configuration options out of the \fIimapd.conf\fR(5)
 file unless specified otherwise by \fB-C\fR.
@@ -134,7 +142,11 @@ Expunge previously deleted messages older than \fIexpunge-duration\fR
 (when using the "delayed" expunge mode).
 Format is the same as delete-duration.
 .TP
-\fB\-x
+\fB-c\fR
+Do not expire conversation database entries, even if the conversations
+feature is enabled.
+.TP
+\fB\-x\fR
 Do not expunge messages even if using delayed expunge mode.  This reduces IO
 traffic considerably, allowing \fBcyr_expire\fR to be run frequently to clean
 up the duplicate database without overloading the machine.
