squatter: add '-o' flag to copy rather than compact single DBs

--- a/man/squatter.8
+++ b/man/squatter.8
@@ -183,6 +183,10 @@ listed therein, then exit.
 In rolling mode, specify the name of the sync log channel that
 \fBsquatter\fP will listen to.  The default is "squatter".
 .TP
+.B \-o
+In compact mode, if only one source database is selected, just copy it
+to the destination rather than compacting.
+.TP
 .B \-r
 Recursively create indexes for all sub-mailboxes of the mailboxes or
 mailbox prefixes given as arguments.
