--- a/man/sync_client.8
+++ b/man/sync_client.8
@@ -101,6 +101,10 @@ sync_client \- client side of the synchronization (replication) engine
             [
 .B \-s
 ]
+[
+.B \-p
+.I partition
+]
 .IR objects ...
 
 .SH DESCRIPTION
@@ -209,6 +213,10 @@ Sieve mode.
 Remaining arguments are list of users whose Sieve files should be replicated.
 Principally used for debugging purposes: not exposed to
 .BR sync_client (8).
+.TP
+.BI \-p " partition"
+In mailbox or user replication mode: provides the name of the
+partition on the replica to which the mailboxes/users should be replicated.
 .SH FILES
 .TP
 .B /etc/imapd.conf
