reconstruct: support 'max' as the -V minor version for up/downgrade

--- a/man/reconstruct.8
+++ b/man/reconstruct.8
@@ -193,7 +193,9 @@ Delete odd files.  This is the opposite of '-o'.
 .TP
 .B -V version
 Change the cyrus.index minor version to a specific version.  This can be
-useful for upgrades or downgrades.
+useful for upgrades or downgrades.  This can either be a specific
+mailbox_minor_version number, or the string 'max' to upgrade ot the current
+version.
 .TP
 .B -u
 Instead of mailbox prefixes, give usernames on the command line
