--- a/man/reconstruct.8
+++ b/man/reconstruct.8
@@ -191,9 +191,10 @@ are using some tool which adds additional tracking files.
 .B -O
 Delete odd files.  This is the opposite of '-o'.
 .TP
-.B -V version
-Change the cyrus.index minor version to a specific version.  This can be
-useful for upgrades or downgrades.
+.BI \-V " version"
+Change the cyrus.index minor version to a specific version. This can be
+useful for upgrades or downgrades. Use a magical version of \fImax\fR to
+upgrade to the latest available database format version.
 .TP
 .B -u
 Instead of mailbox prefixes, give usernames on the command line
