Make a start at documenting the commands & utilities

--- a/doc/source/imap/release-notes/1/1.x.x.rst
+++ b/doc/source/imap/release-notes/1/1.x.x.rst
@@ -1,3 +1,7 @@
+============================
+Cyrus IMAP 1.x Release Notes
+============================
+
 Changes to the Cyrus IMAP Server Since Version 1.6.20
 
 *   Some fixes to the TLS support to gracefully degrade service.
