--- a/doc/source/imap/release-notes/3.0/x/3.0.0.rst
+++ b/doc/source/imap/release-notes/3.0/x/3.0.0.rst
@@ -11,3 +11,11 @@ Cyrus IMAP 3.0.0 Release Notes
     Do **NOT** use this version unless you're a developer of sorts.
 
 *   Dropped support for Berkeley DB.
+
+*   The handling of configure options has changed, dropping support for
+    ``-with-cyrus-prefix`` and ``--with-service-path``.
+
+    The binary blobs to be executed outside of the
+    :manpage:`cyrus-master(8)` service process are now in ``--bindir``
+    or ``--sbindir``, and the binary blobs to be executed by :manpage:`cyrus-master(8)`
+    are in ``--libexecdir``.
