--- a/man/sync_client.8
+++ b/man/sync_client.8
@@ -50,6 +50,9 @@ sync_client \- client side of the synchronization (replication) engine
 .B \-l
 ]
 [
+.B \-L
+]
+[
 .B \-z
 ]
 [
@@ -113,6 +116,9 @@ Verbose mode.  Use twice (-v -v) to log all protocol traffic to stderr.
 .TP
 .BI \-l
 Verbose logging mode.
+.TP
+.BI \-L
+Perform only local mailbox operations (do not do mupdate operations).
 .TP
 .BI \-o
 Only attempt to connect to the backend server once rather than waiting
