--- a/man/reconstruct.8
+++ b/man/reconstruct.8
@@ -191,6 +191,10 @@ are using some tool which adds additional tracking files.
 .B -O
 Delete odd files.  This is the opposite of '-o'.
 .TP
+.B -M
+Prefer mailboxes.db over cyrus.header - will rewrite ACL or uniqueid from
+the mailboxes.db into the header file rather than the other way around.
+.TP
 .BI \-V " version"
 Change the cyrus.index minor version to a specific version. This can be
 useful for upgrades or downgrades. Use a magical version of \fImax\fR to
